# bookerrors

./: .gitignore  README.md  pyproject.toml
docs/: _config.yml  _toc.yml  api_reference.rst  index.md
docs/user_guide/: index.md
fakemodule/: helpers.py
